fixed bug #22355: PDF Generation: Course List is collapsed

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -14219,7 +14219,7 @@ ul.ilPCMyCoursesCourseList > li {
 }
 ul.ilPCMyCoursesObjectiveList > li {
   margin-top: 5px;
-  margin-left: 15px;
+  margin-left: 40px;
 }
 a.ilPCMyCoursesToggle {
   outline: 0;
@@ -14256,6 +14256,9 @@ body.ilPrtfPdfBody > #ilAll > div.ilInvisibleBorder {
 }
 body.ilPrtfPdfBody h1.ilc_PrintPageTitle {
   border-bottom: 1px solid #000000;
+}
+body.ilPrtfPdfBody .ilPCMyCoursesToggle img {
+  visibility: hidden;
 }
 /* Services/Awareness */
 .ilAwarenessDropDown .popover {
